--- a/app/src/main/res/layout/camera2_view.xml
+++ b/app/src/main/res/layout/camera2_view.xml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@android:color/black"
     android:fitsSystemWindows="true">
 
     <TextureView
         android:id="@+id/preview"
+        android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
